# MacroMaker

./: .gitignore  Cargo.toml  README.md  build  build.sh  run.sh
firmware/: Cargo.toml
firmware/src/: lib.rs  main.rs
macromaker/: Cargo.toml
macromaker/src/: actions.rs  button.rs  connection.rs  main.rs  style.rs  ui.rs  updates.rs
macromaker/src/menus/: main.rs  settings.rs
src/: main.rs  style.rs  ui.rs  updates.rs
src/menus/: main.rs  mod.rs  settings.rs
