[package]
name = "firmware"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysfs_gpio = "0.6.1"
serde = { version = "1.0", features = [ "derive" ] }
bincode = "1.3"
crossbeam = "0.8"
