[package]
name = "macromaker"
version = "0.1.0"
edition = "2021"
authors = ["Tim Bukreew <timbukreew624@gmail.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10", features = ["svg"] }
resvg = "0.36.0"
