[package]
name = "macromaker"
version = "0.1.0"
edition = "2021"
authors = ["Tim Bukreew <timbukreew624@gmail.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12", features = ["svg", "tokio"] }
image = "0.24"

firmware = { path = "../firmware" }
tokio = { version = "1.35.1", features = [ "net", "rt" ] }
bincode = "1.3.3"
parking_lot = "0.12.1"
enigo = "0.1.3"
once_cell = "1.19.0"
