[package]
name = "macromaker"
version = "0.1.0"
edition = "2021"
authors = ["Tim Bukreew <timbukreew624@gmail.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12", features = ["svg", "tokio"] }
image = "0.24"
serde = { version = "1.0", features = [ "derive" ] }

firmware = { path = "../firmware" }
tokio = { version = "1.36", features = [ "net", "rt" ] }
bincode = "1.3"
parking_lot = "0.12"
enigo = { version = "0.1", features = [ "serde" ] }
once_cell = "1.19"
smol_str = "0.2"
ron = "0.8"
directories = "5.0.1"
